youfull/objects/Incentive__c.object
<CustomObject>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INCNTV_END_DT__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INCNTV_PRODCT_NM__c</fullName>
        <label>ProductName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INCNTV_REQ_CNT__c</fullName>
        <label>QuantityRequired</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCNTV_STRT_DT__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>LANG_CD</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TITL_LVL_NR_NUMBER__c</fullName>
        <formula>VALUE( TITL_LVL_NR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badge Title Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_LVL_NR__c</fullName>
        <label>Badge Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incentive</label>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>